# kawaii-voice-changer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SHORTCUTS.md  audio-loop-player-example.py  development-plan.md  gui-framework-selection.md  gui_framework_comparison.md  kawaii-voice-research-report.md  kawaii_voice_changer.spec  kawaii_voice_core.py  pyproject.toml  python-realtime-formant-example.py  real-time-audio-processing-comparison.md  requirements-specification.md  runtime_hook.py  technical-selection.md  web-audio-formant-shifter.html
.claude/: settings.local.json
.github/workflows/: binary-test.yml  ci.yml  nightly.yml  release.yml  ruff.yml  test-binary.yml
docs/: README.md  kawaii-voice-research-report.md  remaining-tasks.md
docs/specifications/: requirements-specification.md
resources/: .gitkeep  kawaii-voice-changer.desktop
scripts/: generate_test_audio.py
src/kawaii_voice_changer/: __init__.py  __main__.py  main.py
src/kawaii_voice_changer/core/: __init__.py  audio_player.py  audio_processor.py  audio_recorder.py  preset_manager.py  presets.py  settings_manager.py
src/kawaii_voice_changer/gui/: __init__.py  main_window.py
src/kawaii_voice_changer/gui/dialogs/: __init__.py  preset_dialog.py  recording_dialog.py
src/kawaii_voice_changer/gui/widgets/: __init__.py  parameter_slider.py  playback_controls.py  recording_controls.py  spectrum_display.py  waveform_display.py
src/kawaii_voice_changer/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_ab_comparison.py  test_audio_export.py  test_audio_player.py  test_audio_processor.py  test_audio_recorder.py  test_config.py  test_formant_processing.py  test_loop_region.py  test_preset_manager.py  test_recording_controls.py  test_settings_manager.py  test_spectrum_display.py  test_widgets.py
